manifests/apps/httpbin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    kong-cicd-demo/tier: app
