manifests/apps/httpbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
