manifests/apps/httpbin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: kong
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /headers
      backendRefs:
        - name: httpbin
          port: 80
      timeouts:
        request: 10s
      filters:
        - type: ExtensionRef
          extensionRef:
            group: configuration.konghq.com
            kind: KongPlugin
            name: key-auth-headers
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: httpbin
          port: 80
      timeouts:
        request: 10s
